add flowers to restore page

--- a/restoration.html
+++ b/restoration.html
@@ -85,16 +85,36 @@
 <br>
           <p>In recent years the Monarch Butterfly population has plummeted to critically low levels; levels so low that the US Fish and Wildlife Service is now considering listing the Monarch as Threatened Species. One of the largest factors that has led to the collapse of the Monarch population is the loss of native pollinator habitat. Monarch butterflies depend on milkweed throughout all four stages of their life cycle. Much of the areas that previously provided native wildflower habitat have been reverted to crop and pastureland or intensely manicured landscapes. The loss of native meadows and pollinator habitat has also caused a decline in numerous species of bees, ants, and birds.
           </p>
-<br>
+
+<div>
+        <a data-fancybox="gallery" href="images/2020photos/0120.JPG">
+            <img id="girls" class="col-sm-8"src="images/2020photos/0120.JPG" alt="">
+          </a>
+</div>
           <p>HCW has been developing and implementing Integrated Habitat Management (IHM) plans for numerous concerned landowners for more than a decade. Our integrated approach makes sure each plan is site specific and tailored to individual landowners’ property and will meet their goals and objectives, while remaining within predetermined budgets.
           </p>
-<br>
+          <div>
+                  <a data-fancybox="gallery" href="images/2020photos/0268.JPG">
+                      <img id="girls" class="col-sm-8"src="images/2020photos/0268.JPG" alt="">
+                    </a>
+          </div>
           <p>HCW has an outstanding professional relationship with the Virginia Department of Environmental Quality (DEQ), Virginia Association of Soil and Water Conservation Districts (VASWCD) and the United States Department of Agriculture (USDA) National Resource Conservation Services (NRCS). In most circumstances we can work with these local, state and federal agencies to explore and obtain cost sharing opportunities for a variety for projects that our outlined in our IHM plans.</p>
+          <div>
+                  <a data-fancybox="gallery" href="images/2020photos/0595.JPG">
+                      <img id="girls" class="col-sm-8"src="images/2020photos/0595.JPG" alt="">
+                    </a>
+          </div>
+
+
+</div>
 <br>
 
+
      </div>
+
+
    </div>
- </div>
+
 
 
       <!-- service cards -->
