getting email working

--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
                <div id="topwrapper" class="col-lg-8 mx-auto">
 
 
-                 <form id="myform" class="pure-form pure-form-stacked" action="https://formspree.io/rvanhoutenjr@yahoo.com" method="POST">
+                 <form id="myform" class="pure-form pure-form-stacked" action="https://formspree.io/huntcountrywildlife@gmail.com" method="POST">
                    <div class="control-group">
                      <fieldset class="form-group floating-label-form-group controls mb-0 pb-2 pure-group">
                        <label for="name">Name</label>
