took out gallery rows. fixed bio cred spacing below meet roy fixed HWC and fixed intro on main page

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
         <div class="col-sm-8">
 
 <br>
-            <p style="text-align:center;" class="display-4"><strong class="navbar-brand">HUNT COUNTRY WILDLIFE (HWC) MISSION:</strong></p>
+            <p style="text-align:center;" class="display-4"><strong class="navbar-brand">HUNT COUNTRY WILDLIFE (HCW) MISSION:</strong></p>
 <br>
 <div id="topwrapper">
             <p>Restoring lands, with a science-based approach, back to their fullest natural native potential
@@ -109,7 +109,7 @@
 
 
 <div id="aboutwrapper">
-            <p id="BIO"><strong class="display-4 navbar-brand">COMPANY BIO:</strong></p>
+            <p id="BIO"><strong class="display-4 navbar-brand">BIO:</strong></p>
             <a href="#thetop"id="top">Back to the Top</a>
             <br>
 
@@ -117,8 +117,9 @@
                <img class="img-fluid" src="images/2020photos/IMG_0270.jpg" alt="">
              </a>
 
-            <p id="aboutjustify">Roy Van Houten, Wildlife Biologist, CE, PWS, CPESC, AWB,
-            Founded in 2008, Hunt Country provides various Land and Wildlife Management Services to land owners, cattle ranchers, equestrian estates, vineyards, and home owners associations to develop and implement plans that “maximize a property’s natural potential”. Hunt Country has provided Land and Wildlife Management Services, including native grasses and wildflower meadow establishment, wildlife viewing food plots, nature trail design and establishment, invasive plant species control, pond treatment, and nuisance wildlife control on over ten thousand acres of property located in central and northern Virginia.</p>
+            <p id="aboutjustify">Roy Van Houten, Wildlife Biologist, CE, PWS, CPESC, AWB</p>
+              <br>
+              <p id="aboutjustify">Founded in 2008, Hunt Country provides various Land and Wildlife Management Services to land owners, cattle ranchers, equestrian estates, vineyards, and home owners associations to develop and implement plans that “maximize a property’s natural potential”. Hunt Country has provided Land and Wildlife Management Services, including native grasses and wildflower meadow establishment, wildlife viewing food plots, nature trail design and establishment, invasive plant species control, pond treatment, and nuisance wildlife control on over ten thousand acres of property located in central and northern Virginia.</p>
 
 
             <br>
