--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="service_container">
       <div class="row">
         <div class="col-sm-8">
-            <p id="topwrapper"class="home-txt">Whether you own 5 acres or 5,000 acres, Hunt Country Wildlife Management Services, LLC can help assist you with all of your wildlife management needs.  Our highly educated and motivated team of wildlife biologists, fisheries biologists, and environmental scientists can help develop, implement and maintain an integrated management plan that can unlock your property’s full potential.</p>
+            <p id="topwrapper"class="home-txt">Whether you own 5 acres or 5,000 acres, Hunt Country Wildlife Management Services, LLC can assist you with all of your wildlife needs. Our highly educated, motivated team works with landowners to come up with an integrated management plan that can unlock your property’s full potential. From habitat restoration to pond management to nuisance control, HCW has a solution.</p>
      </div>
    </div>
  </div>
