fixed all the service tabs

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,9 @@
              document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
           </script>
   </div>
-
+  <div class="service_container">
+    <div class="row">
+      <div class="col-sm-8">
 
       <div class="location-info">
                   <div class="contact">
@@ -104,7 +106,7 @@
       </div>
 
       <!-- <section id="contact"> -->
-           <div id="topwrapper"  class="container">
+           <div id="topwrapper">
              <!-- <h2 class="text-center text-uppercase text-secondary mb-0">Contact Us</h2> -->
              <hr class="star-dark mb-5">
              <div class="row">
@@ -150,7 +152,7 @@
 
              </div>
            </div>
-
+</div>
 
        <!-- </section> -->
 
@@ -161,92 +163,97 @@
 <br>
 <br>
 <br>
+
+</div>
+</div>
+</div>
+
 <div>
           <h1 class="display-3 text-center text-white mt-4">Our Services</h1>
 <br>
-    <div class="row" id="servicerow">
-              <div id="centercardrow" class="col-sm-3 my-2">
-                <a href="pm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/with-hunter2.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Property Management</h4>
-                  </a>
-                  </div>
-                </div>
+<div class="row" id="servicerow">
+          <div id="centercardrow" class="col-sm-3 my-2">
+            <a href="pm.html">
+            <div class="card">
+              <img class="card-img-top" src="./images/with-hunter2.jpg" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Property Management</h4>
+              </a>
               </div>
-              <div id="centercardrow" class="col-sm-3 my-2">
-                  <a href="wdm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/BuckPhoto2.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Whitetail Deer Management</h4>
-                  </a>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div id="centercardrow"class="col-sm-3 my-2">
+            <a href="cc.html">
+            <div class="card">
+              <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Client Case Studies</h4>
+              </a>
               </div>
-              <div class="col-sm-3 my-2">
-                <a href="pondm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Pond Management</h4>
-                    </a>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div id="centercardrow" class="col-sm-3 my-2">
+              <a href="restoration.html">
+            <div class="card">
+              <img class="card-img-top" src="./images/2020photos/IMG_0336.jpg" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Habitat Restoration</h4>
+              </a>
               </div>
-              <div id="centercardrow" class="col-sm-3 my-2">
-                  <a href="restoration.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/2020photos/IMG_0336.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Habitat Restoration</h4>
-                  </a>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div id="centercardrow"class="col-sm-3 my-2">
+            <a href="pondm.html">
+            <div class="card">
+              <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Pond Management</h4>
+                </a>
               </div>
-      </div>
+            </div>
+          </div>
 
-    <div class="row" id="servicerow">
-              <div class="col-sm-3 my-2">
-                <a href="nwc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/CanadaGeese2.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Nuisance Wildlife Control</h4>
-                  </a>
-                  </div>
-                </div>
+  </div>
+
+<div class="row" id="servicerow">
+          <div id="centercardrow"class="col-sm-3 my-2">
+            <a href="nwc.html">
+            <div class="card">
+              <img class="card-img-top" src="./images/CanadaGeese2.jpg" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Nuisance Wildlife Control</h4>
+              </a>
               </div>
-              <div id="centercardrow"class="col-sm-3 my-2">
-                <a href="gallery.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Gallery</h4>
-                  </a>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div id="centercardrow"class="col-sm-3 my-2">
+            <a href="gallery.html">
+            <div class="card">
+              <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Gallery</h4>
+              </a>
               </div>
-              <div class="col-sm-3 my-2">
-                <a href="cc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Client Case Studies</h4>
-                  </a>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div id="centercardrow" class="col-sm-3 my-2">
+              <a href="wdm.html">
+            <div class="card">
+              <img class="card-img-top" src="./images/BuckPhoto2.jpg" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Whitetail Deer Management</h4>
+              </a>
               </div>
-      </div>
+            </div>
+          </div>
+  </div>
 
             <!-- /.row -->
 
+</div>
+</div>
 
-          </div>
-    </div>
-    </div>
-    </div>
+
     <!--  service card ends-->
 
     <!-- Footer -->
