--- a/gallery.html
+++ b/gallery.html
@@ -341,7 +341,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-3 my-2">
+              <div id="centercardrow"class="col-sm-3 my-2">
                 <a href="cc.html">
                 <div class="card">
                   <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
@@ -361,7 +361,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-3 my-2">
+              <div id="centercardrow"class="col-sm-3 my-2">
                 <a href="pondm.html">
                 <div class="card">
                   <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
