fixed back button for safari?

--- a/gallery.html
+++ b/gallery.html
@@ -68,6 +68,12 @@
             <! <a class="btn btn-primary btn-lg" href="#">Go Back</a> -->
               <script>
                  document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
+                 $(window).bind("pageshow", function(event) {
+                     if (event.originalEvent.persisted) {
+                         window.location.reload()
+                     }
+                 });
+
               </script>
         </div>
 
