--- a/cc.html
+++ b/cc.html
@@ -71,12 +71,6 @@
           <script>
              document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
 
-             $(window).bind("pageshow", function(event) {
-                 if (event.originalEvent.persisted) {
-                     window.location.reload()
-                 }
-             });
-
           </script>
     </div>
 
@@ -233,6 +227,16 @@
         <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2020</h5>
       </div>
       <!-- /.container -->
+
+      <script>
+      $(window).bind("pageshow", function(event) {
+          if (event.originalEvent.persisted) {
+              window.location.reload()
+          }
+      });
+      </script>
+
+
     </footer>
 
     <!-- Bootstrap core JavaScript -->
