--- a/about.html
+++ b/about.html
@@ -71,11 +71,6 @@
         <!-- <a class="btn btn-primary btn-lg" href="#">Go Back</a> -->
           <script>
              document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
-             $(window).bind("pageshow", function(event) {
-                 if (event.originalEvent.persisted) {
-                     window.location.reload()
-                 }
-             });
 
           </script>
     </div>
@@ -328,6 +323,15 @@
         <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2020</h5>
       </div>
       <!-- /.container -->
+      <script>
+  $(window).bind("pageshow", function(event) {
+      if (event.originalEvent.persisted) {
+          window.location.reload()
+      }
+  });
+  </script>
+
+
     </footer>
 
     <!-- Bootstrap core JavaScript -->
