--- a/contact.html
+++ b/contact.html
@@ -75,12 +75,6 @@
           <script>
              document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
 
-             $(window).bind("pageshow", function(event) {
-                 if (event.originalEvent.persisted) {
-                     window.location.reload()
-                 }
-             });
-             
           </script>
   </div>
   <div class="service_container">
@@ -269,6 +263,14 @@
         <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2020</h5>
       </div>
       <!-- /.container -->
+      <script>
+      $(window).bind("pageshow", function(event) {
+          if (event.originalEvent.persisted) {
+              window.location.reload()
+          }
+      });
+      </script>
+
     </footer>
 
     <!-- Bootstrap core JavaScript -->
