--- a/cc.html
+++ b/cc.html
@@ -229,11 +229,13 @@
       <!-- /.container -->
 
       <script>
-      $(window).bind("pageshow", function(event) {
-          if (event.originalEvent.persisted) {
-              window.location.reload()
-          }
-      });
+      (function () {
+	window.onpageshow = function(event) {
+		if (event.persisted) {
+			window.location.reload();
+		}
+	};
+})();
       </script>
 
 
