--- a/pm.html
+++ b/pm.html
@@ -246,11 +246,13 @@
       </div>
       <!-- /.container -->
       <script>
-      $(window).bind("pageshow", function(event) {
-          if (event.originalEvent.persisted) {
-              window.location.reload()
-          }
-      });
+      (function () {
+	window.onpageshow = function(event) {
+		if (event.persisted) {
+			window.location.reload();
+		}
+	};
+})();
       </script>
 
 
