--- a/gallery.html
+++ b/gallery.html
@@ -122,12 +122,13 @@
   </div>
 
 
+
  <div class="row text-center text-lg-left">
-   <div class="col-lg-3 col-md-4 col-xs-6">
-   <a data-fancybox="gallery" href="images/Large/2020/0528.JPG">
-          <img class="img-fluid img-thumbnail" src="images/Large/2020/0528.JPG" alt="">
-        </a>
+
+  <div class="col-lg-3 col-md-4 col-xs-6">
+    <iframe <img class="img-fluid img-thumbnail" width="560" height="315" src="https://www.youtube.com/embed/_K92CCRp_IE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
+
       <div class="col-lg-3 col-md-4 col-xs-6">
       <a data-fancybox="gallery" href="images/Large/2020/0536.JPG">
              <img class="img-fluid img-thumbnail" src="images/Large/2020/0536.JPG" alt="">
