--- a/gallery.html
+++ b/gallery.html
@@ -57,8 +57,16 @@
         <div class="row">
           <div class="col-lg-12">
               <div class="headerPics">
-            <img src="images/sunset_main.png" class="img-fluid" alt="Responsive image">
-            <img src="images/Wildlife_Logo.jpg" class="main-logo" alt="logo">
+
+                <div class="video-background">
+                    <div class="video-foreground">
+                      <iframe src="https://www.youtube.com/embed/_K92CCRp_IE frameborder="0" autoplay="1" allowfullscreen></iframe>
+                    </div>
+                  </div>
+
+
+
+
           </div>
 
         </div>
