--- a/gallery.html
+++ b/gallery.html
@@ -60,7 +60,7 @@
 
                 <div class="video-background">
                     <div class="video-foreground">
-                      <iframe src="https://www.youtube.com/embed/_K92CCRp_IE frameborder="0" autoplay="1" allowfullscreen></iframe>
+                      <iframe src="https://www.youtube.com/embed/_K92CCRp_IE" frameborder="0" autoplay="1" allowfullscreen></iframe>
                     </div>
                   </div>
 
