--- a/gallery.html
+++ b/gallery.html
@@ -57,29 +57,24 @@
         <div class="row">
           <div class="col-lg-12">
               <div class="headerPics">
-
-                <div class="video-background">
-                    <div class="video-foreground">
-                      <iframe src="https://www.youtube.com/embed/_K92CCRp_IE" frameborder="0" autoplay="1" allowfullscreen></iframe>
-                    </div>
-                  </div>
-
-
-
-
+            <img src="images/sunset_main.png" class="img-fluid" alt="Responsive image">
+            <img src="images/Wildlife_Logo.jpg" class="main-logo" alt="logo">
           </div>
-
         </div>
         </div>
+          </div>
+    </header>
 
         <!-- <div class="da-back-button">
             <! <a class="btn btn-primary btn-lg" href="#">Go Back</a> -->
-              <script>
-                 document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
+            <div class="container">
+              <div class="da-back-button">
+                  <!-- <a class="btn btn-primary btn-lg" href="#">Go Back</a> -->
+                    <script>
+                       document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
 
-              </script>
-        </div>
-
+                    </script>
+              </div>
         <!-- <div class="service-button"><a class="btn btn-primary btn-lg" href="#services">Services</a>
 
         </div> -->
@@ -88,7 +83,7 @@
           </div>
         </div>
       </div>
-    </header>
+
 
     <!-- Page Content -->
     <!-- <div class="container">
@@ -136,6 +131,10 @@
   <div class="col-lg-3 col-md-4 col-xs-6">
     <iframe <img class="img-fluid img-thumbnail" width="560" height="315" src="https://www.youtube.com/embed/_K92CCRp_IE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
+
+      <div class="col-lg-3 col-md-4 col-xs-6">
+        <iframe <img class="img-fluid img-thumbnail" width="560" height="315" src="https://www.youtube.com/embed/mH_jnNZYiJE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
 
       <div class="col-lg-3 col-md-4 col-xs-6">
       <a data-fancybox="gallery" href="images/Large/2020/0536.JPG">
