--- a/gallery.html
+++ b/gallery.html
@@ -70,10 +70,9 @@
             <div class="container">
               <div class="da-back-button">
                   <!-- <a class="btn btn-primary btn-lg" href="#">Go Back</a> -->
-                    <script>
-                       document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
-
-                    </script>
+                  <script>
+                document.write('<a class="btn btn-primary btn-lg" id="back">Go Back</a>');
+            </script>
               </div>
         <!-- <div class="service-button"><a class="btn btn-primary btn-lg" href="#services">Services</a>
 
@@ -431,21 +430,26 @@
       </div>
       <!-- /.container -->
 
-      <script>
-      (function () {
-  	window.onpageshow = function(event) {
-  		if (event.persisted) {
-  			window.location.reload();
-  		}
-  	};
-  })();
-      </script>
+
 
     </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+
+       document.getElementById("back").addEventListener("click", function (event) {
+
+            event.preventDefault();
+
+            window.history.back(-1);
+
+        });
+
+    </script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
     <script src="./gallery.js"></script>
