--- a/wdm.html
+++ b/wdm.html
@@ -70,12 +70,9 @@
 
     <div class="da-back-button">
         <!-- <a class="btn btn-primary btn-lg" href="#">Go Back</a> -->
-          <script>
-             document.write('<a class="btn btn-primary btn-back btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
-
-
-
-          </script>
+        <script>
+                document.write('<a class="btn btn-primary btn-lg" id="back">Go Back</a>');
+            </script>
     </div>
 
   <!-- <div class="service-button"><a class="btn btn-primary btn-lg" href="#services">Services</a>
@@ -251,22 +248,23 @@
       </div>
       <!-- /.container -->
 
-      <script>
-      (function () {
-	window.onpageshow = function(event) {
-		if (event.persisted) {
-			window.location.reload();
-		}
-	};
-})();
-      </script>
-
-
     </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+
+       document.getElementById("back").addEventListener("click", function (event) {
+
+            event.preventDefault();
+
+            window.history.back(-1);
+
+        });
+
+    </script>
 
   </body>
 
