--- a/about.html
+++ b/about.html
@@ -69,10 +69,9 @@
     <a name="thetop"></a>
     <div class="da-back-button">
         <!-- <a class="btn btn-primary btn-lg" href="#">Go Back</a> -->
-          <script>
-             document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
-
-          </script>
+        <script>
+                document.write('<a class="btn btn-primary btn-lg" id="back">Go Back</a>');
+            </script>
     </div>
 
 
@@ -323,15 +322,6 @@
         <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2020</h5>
       </div>
       <!-- /.container -->
-      <script>
-      (function () {
-    	window.onpageshow = function(event) {
-    		if (event.persisted) {
-    			window.location.reload();
-    		}
-    	};
-    })();
-  </script>
 
 
     </footer>
@@ -339,6 +329,18 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+
+       document.getElementById("back").addEventListener("click", function (event) {
+
+            event.preventDefault();
+
+            window.history.back(-1);
+
+        });
+
+    </script>
 
   </body>
 
