--- a/pondm.html
+++ b/pondm.html
@@ -68,9 +68,8 @@
   <div class="container">
     <div class="da-back-button">
         <!-- <a class="btn btn-primary btn-lg" href="#">Go Back</a> -->
-          <script>
-             document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
-
+        <script>
+              document.write('<a class="btn btn-primary btn-lg" id="back">Go Back</a>');
           </script>
     </div>
 
@@ -218,15 +217,7 @@
       </div>
       <!-- /.container -->
 
-      <script>
-      (function () {
-	window.onpageshow = function(event) {
-		if (event.persisted) {
-			window.location.reload();
-		}
-	};
-})();
-      </script>
+
 
 
     </footer>
@@ -234,6 +225,19 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+
+       document.getElementById("back").addEventListener("click", function (event) {
+
+            event.preventDefault();
+
+            window.history.back(-1);
+
+        });
+
+    </script>
+
 
   </body>
 
