service cards: removed client case studies

--- a/contact.html
+++ b/contact.html
@@ -182,6 +182,8 @@
               </div>
             </div>
           </div>
+
+<!-- Client Case
           <div id="centercardrow"class="col-sm-3 my-2">
             <a href="cc.html">
             <div class="card">
@@ -192,6 +194,8 @@
               </div>
             </div>
           </div>
+-->
+
           <div id="centercardrow" class="col-sm-3 my-2">
               <a href="restoration.html">
             <div class="card">
