--- a/nmr.html
+++ b/nmr.html
@@ -227,6 +227,8 @@
                             </div>
                           </div>
                         </div>
+
+      <!-- Client Case
                         <div class="col-sm-3 my-2">
                           <a href="cc.html">
                           <div class="card">
@@ -237,6 +239,8 @@
                             </div>
                           </div>
                         </div>
+            -->
+
                 </div>
 
                       <!-- /.row -->
