--- a/cc.html
+++ b/cc.html
@@ -147,6 +147,8 @@
                         </div>
                       </div>
                     </div>
+
+<!-- Client Case
                     <div id="centercardrow"class="col-sm-3 my-2">
                       <a href="cc.html">
                       <div class="card">
@@ -157,6 +159,8 @@
                         </div>
                       </div>
                     </div>
+-->
+
                     <div id="centercardrow" class="col-sm-3 my-2">
                         <a href="restoration.html">
                       <div class="card">
