--- a/gallery.html
+++ b/gallery.html
@@ -349,6 +349,8 @@
                   </div>
                 </div>
               </div>
+
+            <!-- Client Case
               <div id="centercardrow"class="col-sm-3 my-2">
                 <a href="cc.html">
                 <div class="card">
@@ -359,6 +361,7 @@
                   </div>
                 </div>
               </div>
+    -->          
               <div id="centercardrow" class="col-sm-3 my-2">
                   <a href="restoration.html">
                 <div class="card">
