--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                         </div>
                       </div>
                     </div>
+        <!-- Client Case
                     <div id="centercardrow"class="col-sm-3 my-2">
                       <a href="cc.html">
                       <div class="card">
@@ -123,6 +124,7 @@
                         </div>
                       </div>
                     </div>
+              -->
                     <div id="centercardrow" class="col-sm-3 my-2">
                         <a href="restoration.html">
                       <div class="card">
