--- a/nwc.html
+++ b/nwc.html
@@ -158,6 +158,8 @@
                         </div>
                       </div>
                     </div>
+
+                <!-- Client Case
                     <div id="centercardrow"class="col-sm-3 my-2">
                       <a href="cc.html">
                       <div class="card">
@@ -168,6 +170,7 @@
                         </div>
                       </div>
                     </div>
+                -->
                     <div id="centercardrow" class="col-sm-3 my-2">
                         <a href="restoration.html">
                       <div class="card">
