--- a/pm.html
+++ b/pm.html
@@ -164,6 +164,8 @@
                         </div>
                       </div>
                     </div>
+
+              <!-- Client Case
                     <div id="centercardrow"class="col-sm-3 my-2">
                       <a href="cc.html">
                       <div class="card">
@@ -174,6 +176,7 @@
                         </div>
                       </div>
                     </div>
+                -->
                     <div id="centercardrow" class="col-sm-3 my-2">
                         <a href="restoration.html">
                       <div class="card">
