--- a/pondm.html
+++ b/pondm.html
@@ -136,6 +136,7 @@
                         </div>
                       </div>
                     </div>
+          <!-- Client Case
                     <div id="centercardrow"class="col-sm-3 my-2">
                       <a href="cc.html">
                       <div class="card">
@@ -146,6 +147,7 @@
                         </div>
                       </div>
                     </div>
+          -->
                     <div id="centercardrow" class="col-sm-3 my-2">
                         <a href="restoration.html">
                       <div class="card">
