--- a/wdm.html
+++ b/wdm.html
@@ -168,6 +168,8 @@
                         </div>
                       </div>
                     </div>
+
+                  <!-- Client Case
                     <div id="centercardrow"class="col-sm-3 my-2">
                       <a href="cc.html">
                       <div class="card">
@@ -178,6 +180,7 @@
                         </div>
                       </div>
                     </div>
+                  -->
                     <div id="centercardrow" class="col-sm-3 my-2">
                         <a href="restoration.html">
                       <div class="card">
