fix all service cards

--- a/gallery.html
+++ b/gallery.html
@@ -361,7 +361,7 @@
                   </div>
                 </div>
               </div>
-    -->          
+    -->
               <div id="centercardrow" class="col-sm-3 my-2">
                   <a href="restoration.html">
                 <div class="card">
@@ -410,7 +410,7 @@
                   <a href="wdm.html">
                 <div class="card">
                   <img class="card-img-top" src="./images/BuckPhoto2.jpg" alt="">
-                  <div class="card-body">
+                  <div class="card-body whitetail-title">
                     <h4 class="card-title">Whitetail Deer Management</h4>
                   </a>
                   </div>
