--- a/nmr.html
+++ b/nmr.html
@@ -178,7 +178,7 @@
                             <a href="wdm.html">
                           <div class="card">
                             <img class="card-img-top" src="./images/BuckPhoto2.jpg" alt="">
-                            <div class="card-body">
+                            <div class="card-body whitetail-title">
                               <h4 class="card-title">Whitetail Deer Management</h4>
                             </a>
                             </div>
