--- a/pondm.html
+++ b/pondm.html
@@ -162,7 +162,7 @@
                       <a href="pondm.html">
                       <div class="card">
                         <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
-                        <div class="card-body">
+                        <div class="card-body whitetail-title">
                           <h4 class="card-title">Pond Management</h4>
                           </a>
                         </div>
