--- a/services.html
+++ b/services.html
@@ -107,7 +107,7 @@
                         </div>
                       </div>
                     </div>
-                    
+
               <!-- Client Case
                     <div id="centercardrow"class="col-sm-3 my-2">
                       <a href="cc.html">
@@ -168,7 +168,7 @@
                         <a href="wdm.html">
                       <div class="card">
                         <img class="card-img-top" src="./images/BuckPhoto2.jpg" alt="">
-                        <div class="card-body">
+                        <div class="card-body whitetail-title">
                           <h4 class="card-title">Whitetail Deer Management</h4>
                         </a>
                         </div>
